// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion/HeaderPresenter renders defaut collapsed header 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(128,128,128,0.1);
  border: 0;
  outline: 0;
  padding: 8px 8px;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 700;
  line-height: 1.428571429;
  color: #3c3c3c;
  width: 100%;
  opacity: 1;
}

.emotion-1 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: left;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0 {
  fill: #808080;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  text-align: center;
  margin-right: 0;
  margin-left: 8px;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-0 > path {
  fill: rgba(102,102,102,0.7);
}

<button
  className="emotion-2"
  disabled={undefined}
  onBlur={undefined}
  onClick={undefined}
  onFocus={undefined}
  onMouseDown={undefined}
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  onMouseUp={undefined}
  tabIndex="0"
>
  <svg
    className="emotion-0"
    height="10px"
    viewBox="0 0 10 10"
    width="10px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.22 1.29a.75.75 0 0 0 0 1.06L5.87 5 3.22 7.65a.75.75 0 0 0 0 1.06.74.74 0 0 0 1.06 0l3.36-3.36a.5.5 0 0 0 0-.7L4.28 1.29a.74.74 0 0 0-1.06 0z"
    />
  </svg>
  <div
    className="emotion-1"
  >
    foo
  </div>
</button>
`;

exports[`Accordion/HeaderPresenter renders expanded header 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(128,128,128,0.1);
  border: 0;
  outline: 0;
  padding: 8px 8px;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 700;
  line-height: 1.428571429;
  color: #3c3c3c;
  width: 100%;
  opacity: 1;
}

.emotion-1 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: left;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0 {
  fill: #808080;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  text-align: center;
  margin-right: 0;
  margin-left: 8px;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-0 > path {
  fill: rgba(102,102,102,0.7);
}

<button
  className="emotion-2"
  disabled={undefined}
  onBlur={undefined}
  onClick={undefined}
  onFocus={undefined}
  onMouseDown={undefined}
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  onMouseUp={undefined}
  tabIndex="0"
>
  <svg
    className="emotion-0"
    height="10px"
    viewBox="0 0 10 10"
    width="10px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.22 1.29a.75.75 0 0 0 0 1.06L5.87 5 3.22 7.65a.75.75 0 0 0 0 1.06.74.74 0 0 0 1.06 0l3.36-3.36a.5.5 0 0 0 0-.7L4.28 1.29a.74.74 0 0 0-1.06 0z"
    />
  </svg>
  <div
    className="emotion-1"
  >
    foo
  </div>
</button>
`;

exports[`Accordion/HeaderPresenter renders indicator in the right 1`] = `
.emotion-1 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: left;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0 {
  fill: #808080;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  text-align: center;
  margin-right: 0;
  margin-left: 8px;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-0 > path {
  fill: rgba(102,102,102,0.7);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(128,128,128,0.1);
  border: 0;
  outline: 0;
  padding: 8px 8px;
  padding-left: 12px;
  padding-right: 16px;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 700;
  line-height: 1.428571429;
  color: #3c3c3c;
  width: 100%;
  opacity: 1;
}

<button
  className="emotion-2"
  disabled={undefined}
  onBlur={undefined}
  onClick={undefined}
  onFocus={undefined}
  onMouseDown={undefined}
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  onMouseUp={undefined}
  tabIndex="0"
>
  <svg
    className="emotion-0"
    height="10px"
    viewBox="0 0 10 10"
    width="10px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.22 1.29a.75.75 0 0 0 0 1.06L5.87 5 3.22 7.65a.75.75 0 0 0 0 1.06.74.74 0 0 0 1.06 0l3.36-3.36a.5.5 0 0 0 0-.7L4.28 1.29a.74.74 0 0 0-1.06 0z"
    />
  </svg>
  <div
    className="emotion-1"
  >
    foo
  </div>
</button>
`;

exports[`Accordion/HeaderPresenter renders using operator as indicator 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(128,128,128,0.1);
  border: 0;
  outline: 0;
  padding: 8px 8px;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 700;
  line-height: 1.428571429;
  color: #3c3c3c;
  width: 100%;
  opacity: 1;
}

.emotion-1 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: left;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-0 {
  fill: #808080;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  text-align: center;
  margin-right: 0;
  margin-left: 8px;
  -webkit-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.emotion-0 > * {
  fill: #808080;
}

.emotion-0 > path {
  fill: rgba(102,102,102,0.7);
}

<button
  className="emotion-2"
  disabled={undefined}
  onBlur={undefined}
  onClick={undefined}
  onFocus={undefined}
  onMouseDown={undefined}
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  onMouseUp={undefined}
  tabIndex="0"
>
  <svg
    className="emotion-0"
    height="10px"
    viewBox="0 0 10 10"
    width="10px"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.22 1.29a.75.75 0 0 0 0 1.06L5.87 5 3.22 7.65a.75.75 0 0 0 0 1.06.74.74 0 0 0 1.06 0l3.36-3.36a.5.5 0 0 0 0-.7L4.28 1.29a.74.74 0 0 0-1.06 0z"
    />
  </svg>
  <div
    className="emotion-1"
  >
    foo
  </div>
</button>
`;
